@@ -5,6 +5,8 @@ Revision history for Perl module Handel
     - Removed Build.PL to make Module::Install happy
     - Removed $self->stash->clear call in Checkout->process
     - Checkout->new phases now eval stringsin arrayref correctly
+    - Deprecating phase names as constants. Just use strings and be happy.
+    - Added tests for plugins add_handler using strings
 
 1.00010 Sat Mar 1 13:59:23 2008
     - Fixed some perl critic failures
